[browser] feat: create attachment and add it to Log output